--- a/config.org
+++ b/config.org
@@ -2764,6 +2764,15 @@ Uniquify makes buffers with the same name easier to distinguish. The ~'forward~ 
 (setq uniquify-buffer-name-style 'forward)
 #+end_src
 
+*** use-package
+
+We want packages to be lazy by default. In other words, load only on demand.
+
+#+begin_src elisp
+(after! use-package
+  (setq use-package-always-defer t))
+#+end_src
+
 *** vc-gutter
 
 Let's add minor customization to the =vc-gutter= module:
