--- a/config.org
+++ b/config.org
@@ -1476,19 +1476,19 @@ font string. You generally only need these two:
 ie:
 #+begin_src elisp :tangle no
 (setq! doom-font (font-spec :family "monospace" :size 12 :weight 'semi-light)
-      doom-variable-pitch-font (font-spec :family "sans" :size 13))
+       doom-variable-pitch-font (font-spec :family "sans" :size 13))
 #+end_src
 
-Let's _choose_ our *monospaced* font, /Fira Code/ goodness:
+Let's _choose_ our *monospaced* font, /Sarasa Mono J/ goodness:
 
 #+begin_src elisp
-(setq! doom-font (font-spec :family "Fira Code" :size 16))
+(setq! doom-font (font-spec :family "Sarasa Mono J" :size 18 :weight 'semi-light))
 #+end_src
 
-And our =variable pitch= +font+, ~DejaVu Sans~:
+And our =variable pitch= +font+, ~Sarasa UI J~:
 
 #+begin_src elisp :tangle no
-(setq! doom-variable-pitch-font (font-spec :family "DejaVu Sans" :size 20))
+(setq! doom-variable-pitch-font (font-spec :family "Sarasa UI J" :size 18 :weight 'extra-light))
 #+end_src
 
 Comments and keywords should pop more...
@@ -1506,12 +1506,12 @@ When in zen mode, scale text just a bit.
   (setq! +zen-text-scale 1.25))
 #+end_src
 
-Not everything fits in the =mode line=, so let's make fonts and icons smaller:
+Not everything fits in the =mode-line=, so let's make fonts and icons smaller:
 
 #+begin_src elisp
 (custom-set-faces!
-  '(mode-line :family "Victor Mono" :height 0.95)
-  '(mode-line-inactive :family "Victor Mono" :height 0.95))
+  '(mode-line :family "Sarasa UI J" :height 0.9)
+  '(mode-line-inactive :family "Sarasa UI J" :height 0.9))
 
 (after! all-the-icons
   (setq! all-the-icons-scale-factor 1.1))
