chore: Remove unused ansible module.

--- a/config.org
+++ b/config.org
@@ -923,7 +923,7 @@ My english is not the best, neither is my spanish or my 日本語 for that matte
 ***** TODO ansible
 #+begin_src elisp :tangle init.el
        :tools
-       ansible
+       ;; ansible
 #+end_src
 
 Fixing that code, on step at a time.
