feat(fennel): Add fennel support.

--- a/config.org
+++ b/config.org
@@ -1057,7 +1057,7 @@ Better integration of Emacs with the terminal emulator, particularly:
        ;;lean
        ;;factor
        ;;ledger            ; an accounting system in Emacs
-       (lua +lsp)               ; one-based indices? one-based indices
+       (lua +lsp +fennel)  ; one-based indices? one-based indices
        markdown          ; writing docs for people to ignore
        ;;nim               ; python + lisp at the speed of c
        nix               ; I hereby declare "nix geht mehr!"
