chore: Added fortran module description.

--- a/config.org
+++ b/config.org
@@ -1041,6 +1041,7 @@ Better integration of Emacs with the terminal emulator, particularly:
        ;;erlang            ; an elegant language for a more civilized age
        ;;ess               ; Emacs speaks statistics
        ;;faust             ; dsp, but you get to keep your soul
+       ;;fortran           ; in FORTRAN, GOD is REAL (unless declared INTEGER)
        ;;fsharp            ; ML stands for Microsoft's Language
        ;;fstar             ; (dependent) types and (monadic) effects and Z3
        ;;gdscript          ; the language you waited for
