fix(magit-delta): Fix for large diffs.

--- a/config.org
+++ b/config.org
@@ -1988,6 +1988,32 @@ This =emacs= package provides a minor mode which configures =magit= to use delta
   :hook (magit-mode . magit-delta-mode))
 #+end_src
 
+~magit-delta-mode~ can be slow on big diffs. Luckily, we can [[https://github.com/dandavison/magit-delta/issues/9#issuecomment-795435781][advice the appropiate functions]] to deactivate the mode on big buffers.
+
+#+begin_src elisp
+(after! magit-delta
+  (defcustom dan/magit-delta-point-max 50000
+    "Maximum length of diff buffer which `magit-delta' will tolerate."
+    :group 'magit-delta
+    :type 'natnum)
+  (defadvice! dan/magit-delta-colorize-maybe (fn &rest args)
+    "Disable mode if there are too many characters."
+    :around #'magit-delta-call-delta-and-convert-ansi-escape-sequences
+    (if (<= (point-max) dan/magit-delta-point-max)
+        (apply fn args)
+      (magit-delta-mode -1))))
+#+end_src
+
+Re-enable mode after ~magit-refresh~ if there aren't too many characters.
+
+#+begin_src elisp
+(after! magit
+  (add-hook! 'magit-post-refresh-hook
+    (when (and (not magit-delta-mode)
+               (<= (point-max) dan/magit-delta-point-max))
+      (magit-delta-mode +1))))
+#+end_src
+
 *** Modeline
 
 The default =doom-modeline= is great, the only thing is that I want it to show me
