--- a/config.org
+++ b/config.org
@@ -1702,7 +1702,7 @@ Various bits and pieces to enhance the Elfeed user experience.
 
 *** Elfeed Org
 
-And point elfeed to the org configuration file.
+And point =elfeed= to the org configuration file.
 
 #+begin_src elisp
 (after! elfeed
